Fix question loading: relax pedagogical validation and expand fallback question banks for all subjects